# finance-rag-agent

./: .env.example  .gitignore  Dockerfile  README.md  app.py  cli.py  pyproject.toml
data/raw/: fy2025_tax_summary.md  helios_supply_agreement.md  orion_10k_fy2025_excerpt.md
orchestration/: finance_rag_dag.py
src/finance_rag/: __init__.py  agent.py  config.py  documents.py  embedder.py  findb.py  graph.py  groq_agent.py  indexer.py  pipeline.py  tools.py
tests/: conftest.py  test_documents.py  test_findb.py  test_graph.py  test_indexer.py  test_tools.py
