[project]
name = "finance-rag-agent"
version = "0.1.0"
description = "Agentic RAG over financial documents (SEC filings, contracts, tax reports) with citations, Graph-RAG, and a read-only SQL tool"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-genai>=1.0.0",
    "groq>=0.13.0",
    "chromadb>=1.0.0",
    "pypdf>=5.0.0",
    "python-dotenv>=1.0.0",
    "streamlit>=1.40.0",
    "pandas>=2.2.0",
]

[dependency-groups]
dev = ["pytest>=8.0.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/finance_rag"]

[tool.pytest.ini_options]
testpaths = ["tests"]
